--- a/crms/css/main.css
+++ b/crms/css/main.css
@@ -1,24 +1,35 @@
+body{
+    background-color: #1e1e1e;
+}
+
 .header-main{
     width: 100%;
     height: 60px;
-    background-color: #000;
+    background-color: #fff;
+    display: flex;
+    justify-content: space-between;
 }
 
-.header-main div{
+.header-main-logo{
+    width: fit-content;
+    height: 100%;
+    background-color: blanchedalmond;
+}
+
+.header-main-logo img{
     height: 30px;
 }
 
-.header-main .div-1{
-    width: 100px;
-    background-color: #b381de;
+.header-main-nav{
+    width: 120px;
+    height: 100%;
+    background-color: rgb(80, 213, 236);
+    
 }
 
-.header-main .div-2{
-    width: 100px;
-    background-color: #6ade95;
-}
-
-.header-main .div-3{
-    width: 100px;
-    background-color: #dea954;
+.header-main-sm{
+    width: 120px;
+    height: 100%;
+    background-color: rgb(183, 206, 100);
+    
 }
