--- a/crms/css/main.css
+++ b/crms/css/main.css
@@ -2,6 +2,10 @@ body{
     background-color: #1e1e1e;
 }
 
+a {
+    cursor: pointer;
+}
+
 .header-main{
     width: 100%;
     height: 60px;
@@ -14,17 +18,36 @@ body{
     width: fit-content;
     height: 100%;
     background-color: blanchedalmond;
+    padding-left: 60px;
+    display: flex;
 }
 
 .header-main-logo img{
-    height: 30px;
+    height: 40px;
+    align-self: center;
 }
 
 .header-main-nav{
-    width: 120px;
+    width: fit-content;
     height: 100%;
     background-color: rgb(80, 213, 236);
     
+}
+
+.header-main-nav ul{
+    list-style: none;
+    margin-left: 30px;
+}
+
+.header-main-nav ul li{
+    display: inline;
+    float: left;
+}
+
+.header-main-nav ul li a{
+    padding: 0 10px 0 10px;
+    font-family: Arial, Helvetica, sans-serif;
+    line-height: 60px;
 }
 
 .header-main-sm{
@@ -32,4 +55,14 @@ body{
     height: 100%;
     background-color: rgb(183, 206, 100);
     
+}
+
+.header-main-sm-fb{
+    width: 20px;
+    height: 20px;
+    background-image: url(../img/);
+}
+
+.header-main-sm-in{
+
 }
