--- a/crms/css/main.css
+++ b/crms/css/main.css
@@ -31,16 +31,29 @@ h1{
     line-height: 32px;
     color: #fff;
     font-family: Oswald;
+    font-weight: 600;
+    text-transform: uppercase;
+}
+
+p{
+    font-size: 14px;
+    line-height: 18px;
+    color: #fff;
+    font-family: Oswald;
 }
 
 a {
+    font-size: 14px;
+    line-height: 18px;
+    color: #fff;
+    font-family: Oswald;
     cursor: pointer;
 }
 
 .header-main{
     width: 100%;
     height: 60px;
-    background-color: #fff;
+    background-color: #B666D2;
     display: flex;
     justify-content: space-between;
 }
