--- a/crms/css/index.css
+++ b/crms/css/index.css
@@ -101,7 +101,7 @@ main .main-quotes{
 }
 
 .index-category-box:nth-child(3) {
-    background-image: url(../img/stars.png);
+    background-image: url(../img/lila.png);
 }
 
 .index-category-box:nth-child(4) {
